parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> singltons
Rule 2     start -> keyvaluepairs
Rule 3     start -> list
Rule 4     singltons -> NUM
Rule 5     singltons -> STR
Rule 6     singltons -> BOOL
Rule 7     keyvaluepairs -> LPR body RPR
Rule 8     keyvaluepairs -> LPR RPR
Rule 9     body -> body COMMA bodybase
Rule 10    body -> bodybase
Rule 11    bodybase -> STR COLON start
Rule 12    list -> LBR items RBR
Rule 13    items -> items COMMA baseitems
Rule 14    items -> baseitems
Rule 15    baseitems -> singltons
Rule 16    baseitems -> keyvaluepairs

Terminals, with rules where they appear

BOOL                 : 6
COLON                : 11
COMMA                : 9 13
LBR                  : 12
LPR                  : 7 8
NUM                  : 4
RBR                  : 12
RPR                  : 7 8
STR                  : 5 11
error                : 

Nonterminals, with rules where they appear

baseitems            : 13 14
body                 : 7 9
bodybase             : 9 10
items                : 12 13
keyvaluepairs        : 2 16
list                 : 3
singltons            : 1 15
start                : 11 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . singltons
    (2) start -> . keyvaluepairs
    (3) start -> . list
    (4) singltons -> . NUM
    (5) singltons -> . STR
    (6) singltons -> . BOOL
    (7) keyvaluepairs -> . LPR body RPR
    (8) keyvaluepairs -> . LPR RPR
    (12) list -> . LBR items RBR

    NUM             shift and go to state 5
    STR             shift and go to state 6
    BOOL            shift and go to state 7
    LPR             shift and go to state 8
    LBR             shift and go to state 9

    start                          shift and go to state 1
    singltons                      shift and go to state 2
    keyvaluepairs                  shift and go to state 3
    list                           shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> singltons .

    $end            reduce using rule 1 (start -> singltons .)
    RPR             reduce using rule 1 (start -> singltons .)
    COMMA           reduce using rule 1 (start -> singltons .)


state 3

    (2) start -> keyvaluepairs .

    $end            reduce using rule 2 (start -> keyvaluepairs .)
    RPR             reduce using rule 2 (start -> keyvaluepairs .)
    COMMA           reduce using rule 2 (start -> keyvaluepairs .)


state 4

    (3) start -> list .

    $end            reduce using rule 3 (start -> list .)
    RPR             reduce using rule 3 (start -> list .)
    COMMA           reduce using rule 3 (start -> list .)


state 5

    (4) singltons -> NUM .

    $end            reduce using rule 4 (singltons -> NUM .)
    RBR             reduce using rule 4 (singltons -> NUM .)
    COMMA           reduce using rule 4 (singltons -> NUM .)
    RPR             reduce using rule 4 (singltons -> NUM .)


state 6

    (5) singltons -> STR .

    $end            reduce using rule 5 (singltons -> STR .)
    RBR             reduce using rule 5 (singltons -> STR .)
    COMMA           reduce using rule 5 (singltons -> STR .)
    RPR             reduce using rule 5 (singltons -> STR .)


state 7

    (6) singltons -> BOOL .

    $end            reduce using rule 6 (singltons -> BOOL .)
    RBR             reduce using rule 6 (singltons -> BOOL .)
    COMMA           reduce using rule 6 (singltons -> BOOL .)
    RPR             reduce using rule 6 (singltons -> BOOL .)


state 8

    (7) keyvaluepairs -> LPR . body RPR
    (8) keyvaluepairs -> LPR . RPR
    (9) body -> . body COMMA bodybase
    (10) body -> . bodybase
    (11) bodybase -> . STR COLON start

    RPR             shift and go to state 11
    STR             shift and go to state 13

    body                           shift and go to state 10
    bodybase                       shift and go to state 12

state 9

    (12) list -> LBR . items RBR
    (13) items -> . items COMMA baseitems
    (14) items -> . baseitems
    (15) baseitems -> . singltons
    (16) baseitems -> . keyvaluepairs
    (4) singltons -> . NUM
    (5) singltons -> . STR
    (6) singltons -> . BOOL
    (7) keyvaluepairs -> . LPR body RPR
    (8) keyvaluepairs -> . LPR RPR

    NUM             shift and go to state 5
    STR             shift and go to state 6
    BOOL            shift and go to state 7
    LPR             shift and go to state 8

    items                          shift and go to state 14
    baseitems                      shift and go to state 15
    singltons                      shift and go to state 16
    keyvaluepairs                  shift and go to state 17

state 10

    (7) keyvaluepairs -> LPR body . RPR
    (9) body -> body . COMMA bodybase

    RPR             shift and go to state 18
    COMMA           shift and go to state 19


state 11

    (8) keyvaluepairs -> LPR RPR .

    $end            reduce using rule 8 (keyvaluepairs -> LPR RPR .)
    RBR             reduce using rule 8 (keyvaluepairs -> LPR RPR .)
    COMMA           reduce using rule 8 (keyvaluepairs -> LPR RPR .)
    RPR             reduce using rule 8 (keyvaluepairs -> LPR RPR .)


state 12

    (10) body -> bodybase .

    RPR             reduce using rule 10 (body -> bodybase .)
    COMMA           reduce using rule 10 (body -> bodybase .)


state 13

    (11) bodybase -> STR . COLON start

    COLON           shift and go to state 20


state 14

    (12) list -> LBR items . RBR
    (13) items -> items . COMMA baseitems

    RBR             shift and go to state 21
    COMMA           shift and go to state 22


state 15

    (14) items -> baseitems .

    RBR             reduce using rule 14 (items -> baseitems .)
    COMMA           reduce using rule 14 (items -> baseitems .)


state 16

    (15) baseitems -> singltons .

    RBR             reduce using rule 15 (baseitems -> singltons .)
    COMMA           reduce using rule 15 (baseitems -> singltons .)


state 17

    (16) baseitems -> keyvaluepairs .

    RBR             reduce using rule 16 (baseitems -> keyvaluepairs .)
    COMMA           reduce using rule 16 (baseitems -> keyvaluepairs .)


state 18

    (7) keyvaluepairs -> LPR body RPR .

    $end            reduce using rule 7 (keyvaluepairs -> LPR body RPR .)
    RBR             reduce using rule 7 (keyvaluepairs -> LPR body RPR .)
    COMMA           reduce using rule 7 (keyvaluepairs -> LPR body RPR .)
    RPR             reduce using rule 7 (keyvaluepairs -> LPR body RPR .)


state 19

    (9) body -> body COMMA . bodybase
    (11) bodybase -> . STR COLON start

    STR             shift and go to state 13

    bodybase                       shift and go to state 23

state 20

    (11) bodybase -> STR COLON . start
    (1) start -> . singltons
    (2) start -> . keyvaluepairs
    (3) start -> . list
    (4) singltons -> . NUM
    (5) singltons -> . STR
    (6) singltons -> . BOOL
    (7) keyvaluepairs -> . LPR body RPR
    (8) keyvaluepairs -> . LPR RPR
    (12) list -> . LBR items RBR

    NUM             shift and go to state 5
    STR             shift and go to state 6
    BOOL            shift and go to state 7
    LPR             shift and go to state 8
    LBR             shift and go to state 9

    start                          shift and go to state 24
    singltons                      shift and go to state 2
    keyvaluepairs                  shift and go to state 3
    list                           shift and go to state 4

state 21

    (12) list -> LBR items RBR .

    $end            reduce using rule 12 (list -> LBR items RBR .)
    RPR             reduce using rule 12 (list -> LBR items RBR .)
    COMMA           reduce using rule 12 (list -> LBR items RBR .)


state 22

    (13) items -> items COMMA . baseitems
    (15) baseitems -> . singltons
    (16) baseitems -> . keyvaluepairs
    (4) singltons -> . NUM
    (5) singltons -> . STR
    (6) singltons -> . BOOL
    (7) keyvaluepairs -> . LPR body RPR
    (8) keyvaluepairs -> . LPR RPR

    NUM             shift and go to state 5
    STR             shift and go to state 6
    BOOL            shift and go to state 7
    LPR             shift and go to state 8

    baseitems                      shift and go to state 25
    singltons                      shift and go to state 16
    keyvaluepairs                  shift and go to state 17

state 23

    (9) body -> body COMMA bodybase .

    RPR             reduce using rule 9 (body -> body COMMA bodybase .)
    COMMA           reduce using rule 9 (body -> body COMMA bodybase .)


state 24

    (11) bodybase -> STR COLON start .

    RPR             reduce using rule 11 (bodybase -> STR COLON start .)
    COMMA           reduce using rule 11 (bodybase -> STR COLON start .)


state 25

    (13) items -> items COMMA baseitems .

    RBR             reduce using rule 13 (items -> items COMMA baseitems .)
    COMMA           reduce using rule 13 (items -> items COMMA baseitems .)

